# Forge_Mind

./: .gitignore  CODEBASE_NOTES.md  INSTRUCTIONS.md  README.md
backend/: forgemind.spec  main.py  requirements.txt
backend/auth/: gmail.py  routes.py
backend/core/: config.py  llm.py  secret_store.py  settings.py
backend/modules/: __init__.py
backend/modules/mailmind/: __init__.py  chroma.py  parsing.py  prompts.py  routes.py  service.py  settings.py  store.py
backend/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js  modules.js  providers.js
frontend/src/core/: Logo.jsx  Shell.jsx
frontend/src/modules/: registry.jsx
frontend/src/modules/mailmind/: MailMind.jsx  MailMindSettings.jsx  api.js  index.jsx
frontend/src/pages/: LocationPicker.jsx  Settings.jsx  Setup.jsx
scripts/: build-desktop.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
