[package]
name = "forgemind"
version = "0.2.0"
description = "ForgeMind Desktop"
authors = ["ForgeMind"]
edition = "2021"

[lib]
name = "forgemind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forgemind"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
